# cpp_lab

CMake/01_basics/: CMakeLists.txt  build_using_mingw.bat  main.cpp
CMake/02_static_library/: CMakeLists.txt  userclass.hpp
CMake/03_conditionals/: CMakeLists.txt  main.cpp  userclass.cpp
CMake/04_compilers_info/: CMakeLists.txt
CMake/05_debug_release/: CMakeLists.txt
CMake/06_compiler_flags/: CMakeLists.txt  a.hpp  b.cpp  b.hpp  main.cpp
CMake/07_lang_standard/: CMakeLists.txt  a.cpp  a.hpp  b.cpp  b.hpp  main.cpp
CMake/08_for-each/: CMakeLists.txt  a.cpp  c.cpp  c.hpp  d.cpp  d.hpp  main.cpp
CMake/09_os-detection/: CMakeLists.txt  main.cpp
Design_Patterns/Adapter/: CMakeLists.txt  main.cpp
Design_Patterns/Builder/: CMakeLists.txt  main.cpp
Design_Patterns/Factory/: CMakeLists.txt  main.cpp
Idioms_and_Principles/: information_hiding.cpp  loose_coupling.cpp
Idioms_and_Principles/Pimpl/: pimpl-cheshire_cat.cpp  pimpl-cheshire_cat_widget.cpp  pimpl-cheshire_cat_widget.hpp
STL/algorithms/: CMakeLists.txt  for_each.cpp  heaps.cpp  sort.cpp
STL/containers/: CMakeLists.txt  std_map.cpp  std_pair.cpp  std_stack.cpp  std_vector.cpp
classes/: main.cpp
functions/: main.cpp
